Implement dynamic sidebar menu generation and initialize on DOM ready

--- a/index.html
+++ b/index.html
@@ -23,120 +23,7 @@
     <div class="container">
         <nav id="sidebar" class="sidebar" aria-label="Primary">
             <ul class="menu" role="menu">
-                <li role="none">
-                    <a role="menuitem" href="#/home" data-route="pages/the-planet/about/about.html">
-                        <i class="fas fa-home" aria-hidden="true"></i> Home
-                    </a>
-                </li>
-
-                <li role="none">
-                    <details class="submenu-group" open>
-                        <summary class="submenu-summary">
-                            <i class="fas fa-book" aria-hidden="true"></i>
-                            <span>Reading and Studying</span>
-                        </summary>
-                        <ul class="submenu" role="menu">
-                            <li role="none">
-                                <details class="submenu-group">
-                                    <summary class="submenu-summary">
-                                        <i class="fas fa-folder" aria-hidden="true"></i>
-                                        <span>Agile</span>
-                                    </summary>
-                                    <ul class="submenu" role="menu">
-                                        <li role="none">
-                                            <a role="menuitem" href="#/agile-manifesto" data-route="pages/reading-studying/agile-software-development/agile-software-development.html">
-                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Agile Manifesto
-                                            </a>
-                                        </li>
-                                        <li role="none">
-                                            <a role="menuitem" href="#/scrum" data-route="pages/reading-studying/agile-software-development/scrum.html">
-                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Scrum
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </details>
-                            </li>
-
-                            <li role="none">
-                                <details class="submenu-group">
-                                    <summary class="submenu-summary">
-                                        <i class="fas fa-folder" aria-hidden="true"></i>
-                                        <span>Leadership</span>
-                                    </summary>
-                                    <ul class="submenu" role="menu">
-                                        <li role="none">
-                                            <a role="menuitem" href="#/leadership" data-route="pages/reading-studying/leadership/leadership.html">
-                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Leadership
-                                            </a>
-                                        </li>
-                                        <li role="none">
-                                            <a role="menuitem" href="#/coaching" data-route="pages/reading-studying/leadership/coaching.html">
-                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Coaching
-                                            </a>
-                                        </li>
-                                        <li role="none">
-                                            <a role="menuitem" href="#/decision-making" data-route="pages/reading-studying/leadership/decision-making.html">
-                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Decision-making
-                                            </a>
-                                        </li>
-                                        <li role="none">
-                                            <a role="menuitem" href="#/delegation" data-route="pages/reading-studying/leadership/delegation.html">
-                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Delegation
-                                            </a>
-                                        </li>
-                                        <li role="none">
-                                            <a role="menuitem" href="#/time-management" data-route="pages/reading-studying/leadership/time-management.html">
-                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Time-management
-                                            </a>
-                                        </li>
-                                        <li role="none">
-                                            <a role="menuitem" href="#/assessment-leadership-skills" data-route="pages/reading-studying/leadership/assessment-leadership-skills.html">
-                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Assessment Leadership Skills
-                                            </a>
-                                        </li>
-                                        <li role="none">
-                                            <a role="menuitem" href="#/check-list" data-route="pages/reading-studying/leadership/check-list.html">
-                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Check List
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </details>
-                            </li>
-
-                            <li role="none">
-                                <details class="submenu-group">
-                                    <summary class="submenu-summary">
-                                        <i class="fas fa-folder" aria-hidden="true"></i>
-                                        <span>PMBOK Guide</span>
-                                    </summary>
-                                    <ul class="submenu" role="menu">
-                                        <li role="none">
-                                            <a role="menuitem" href="#/pmbok-introduction" data-route="pages/reading-studying/pmbok-guide/introduction.html">
-                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Introduction
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </details>
-                            </li>
-                        </ul>
-                    </details>
-                </li>
-
-                <li role="none">
-                    <details class="submenu-group">
-                        <summary class="submenu-summary">
-                            <i class="fas fa-folder" aria-hidden="true"></i>
-                            <span>Writing and Opinion</span>
-                        </summary>
-                        <ul class="submenu" role="menu">
-                            <li role="none">
-                                <a role="menuitem" href="#/personal-values-creation" data-route="pages/writing-opinion/personal-values-creation.html">
-                                    <i class="fas fa-file-alt" aria-hidden="true"></i> Personal Values Creation
-                                </a>
-                            </li>
-                        </ul>
-                    </details>
-                </li>
+                <!-- Menu will be generated from main-menu.js -->
             </ul>
             <button id="sidebar-toggle" class="sidebar-toggle" aria-label="Toggle sidebar" title="Toggle sidebar">
                 <i class="fas fa-chevron-left left-icon" aria-hidden="true"></i>
@@ -151,6 +38,8 @@
             <iframe name="content-frame" src="pages/the-planet/about/about.html" style="width: 100%; height: 100%; border: none;"></iframe>
         </main>
     </div>
+    <!-- Link to menu definition -->
+    <script src="main-menu.js"></script>
     <!-- Link to external JavaScript file -->
     <script src="scripts.js"></script>
 </body>
