Add AI indicator to logo and enhance header styles for improved aesthetics

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <div class="logo-container">
                 <i class="fas fa-globe"></i>
                 <h1 class="logo">My Personal Planet </h1>
+                <div class="ai-indicator">
+                    <i class="fas fa-sparkles" aria-hidden="true"></i>
+                    <span title="This content was generated with the assistance of Artificial Intelligence (AI)">AI</span>
+                </div>
             </div>
             <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
                 <span class="slider"></span>
